--- a/index-base.html
+++ b/index-base.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Gallery</title>
+		<link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -10,27 +11,27 @@
 		<main>
 			<article>
 				<h2>Andrea</h2>
-				<img src="" alt="Andrea">
+				<img src="Assets/kid6.png" alt="Andrea">
 			</article>
 			<article>
 				<h2>Nuria</h2>
-				<img src="" alt="Nuria">
+				<img src="Assets/kid1.png" alt="Nuria">
 			</article>
 			<article>
 				<h2>Hugo</h2>
-				<img src="" alt="Hugo">
+				<img src="Assets/kid2.png" alt="Hugo">
 			</article>
 			<article>
 				<h2>Miguel</h2>
-				<img src="" alt="Miguel">
+				<img src="Assets/kid3.png" alt="Miguel">
 			</article>
 			<article>
 				<h2>Mariña</h2>
-				<img src="" alt="Mariña">
+				<img src="Assets/kid4.png" alt="Mariña">
 			</article>
 			<article>
 				<h2>Ernesto</h2>
-				<img src="" alt="Ernesto">
+				<img src="Assets/kid5.png" alt="Ernesto">
 			</article>
 		</main>
 		<footer>
